# cosmodrome

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  flake.nix  layout.kdl  rustfmt.toml
.github/workflows/: audit.yml  build-test.yml
examples/bearer/: Cargo.toml
examples/bearer/src/: main.rs
examples/cookie/src/: main.rs
examples/simple/: Cargo.toml  index.html
examples/simple/src/: main.rs
src/: account.rs  account_claims.rs  account_credentials.rs  account_provider.rs  auth_type.rs  boarding_pass.rs  ciphering.rs  gate.rs  immigration.rs  lib.rs  passport.rs  passport_register.rs  rocket.rs  server.rs  spaceport_setup.rs  storage.rs  ticket.rs  user_claims.rs
src/account/: account_type.rs
src/boarding_pass/: ciphering.rs  generator.rs  jwt.rs  payloads.rs  storage.rs
src/gate/: memory.rs
src/passport/: passport_type.rs  register.rs
src/server/: auth_type.rs  boarding_pass.rs  ciphering.rs  gate.rs  passport_register.rs  storage.rs
src/server/boarding_pass/: payloads.rs
src/server/passport/: passport_type.rs
