[package]
name = "cosmodrome"
version = "0.2.0-dev"
authors = ["Lewin Probst <info@emirror.de>"]
edition = "2021"
description = "Access control for your rocket application."
categories = ["authentication", "web-programming"]
keywords = ["rocket", "auth", "access control"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/emirror-de/cosmodrome"
repository = "https://github.com/emirror-de/cosmodrome"
documentation = "https://docs.rs/cosmodrome"
readme = "README.md"

[dependencies]
anyhow = "1"
argon2 = "0.5.3"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
log = "0.4"
rand = "0.8"
rocket = { version = "0.5", features = ["secrets"] }
