[package]
name = "cosmodrome"
version = "0.2.0-dev"
authors = ["Lewin Probst <info@emirror.de>"]
edition = "2021"
description = "Access control for your rocket application."
categories = ["authentication", "web-programming"]
keywords = ["rocket", "auth", "access control"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/emirror-de/cosmodrome"
repository = "https://github.com/emirror-de/cosmodrome"
documentation = "https://docs.rs/cosmodrome"
readme = "README.md"

[features]
default = ["server"]
server = ["rocket", "argon2", "chrono", "jsonwebtoken", "log", "rand", "anyhow"]
client = []

[dependencies]
anyhow = { version = "1", optional = true }
argon2 = { version =  "0.5.3", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
jsonwebtoken = { version = "9", optional = true }
log = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
rocket = { version = "0.5", features = ["secrets"], optional = true }
