[package]
name = "cosmodrome"
version = "0.2.0-dev"
authors = ["Lewin Probst <info@emirror.de>"]
edition = "2021"
description = "Access control for your rocket application."
categories = ["authentication", "web-programming"]
keywords = ["rocket", "auth", "access control"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/emirror-de/cosmodrome"
repository = "https://github.com/emirror-de/cosmodrome"
documentation = "https://docs.rs/cosmodrome"
readme = "README.md"

[features]
default = ["server", "client"]
server = ["dep:rocket", "dep:argon2", "dep:chrono", "dep:jsonwebtoken", "dep:log", "dep:rand", "dep:anyhow"]
client = ["serde"]

[dependencies]
anyhow = { version = "1", optional = true }
argon2 = { version =  "0.5.3", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
cookie = "0.18"
http = "1"
jsonwebtoken = { version = "9", optional = true }
log = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
rocket = { version = "0.5", features = ["secrets"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
time = "0.3"
